<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_bg_all">

    <LinearLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question1"
            style="@style/CustomizableTextView"
            android:text="@string/chemq1" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuestionOneGroupSelected"
                android:text="@string/chemq1o1" />

            <RadioButton
                android:id="@+id/radioB1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuestionOneGroupSelected"
                android:text="@string/chemq1o2" />

            <RadioButton
                android:id="@+id/radioC1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuestionOneGroupSelected"
                android:text="@string/chemq1o3" />

            <RadioButton
                android:id="@+id/radioD1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuestionOneGroupSelected"
                android:text="@string/chemq1o4" />

        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            style="@style/CustomizableTextView"
            android:layout_marginTop="30dp"
            android:text="@string/chemq2" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuestionTwoGroupSelected"
                android:text="@string/chemq2o1" />

            <RadioButton
                android:id="@+id/radioB2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuestionTwoGroupSelected"
                android:text="@string/chemq2o2" />

            <RadioButton
                android:id="@+id/radioC2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuestionTwoGroupSelected"
                android:text="@string/chemq2o3" />

            <RadioButton
                android:id="@+id/radioD2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQuestionTwoGroupSelected"
                android:text="@string/chemq2o4" />

        </RadioGroup>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="submit"
            android:text="@string/submit" />

    </LinearLayout>
</ScrollView>